# Fatty-Hangman

./: CMakeLists.txt  README.md
QuestionsDir/: Questions.json
Scripts/: Game.cpp  Game.h  Hangman.cpp  Hangman.h  main.cpp
questJson/: Questions.json
src/: Game.cpp  Hangman.cpp  Hangman.h  main.cpp
